--- a/application/modules/admin/views/scripts/projetos/index.phtml
+++ b/application/modules/admin/views/scripts/projetos/index.phtml
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-  <li  class="active"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span> Projetos</li>
+  <li  ><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span> Projetos</li>
 </ol>
 
 <style>
@@ -17,7 +17,7 @@
 
 
 <p>
-<a href="<?php echo $this->baseUrl('/admin/projetos/adicionar'); ?>"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus" ></span>  Adicionar</button></a></p>
+<a href="<?php echo $this->baseUrl('/admin/projetos/add'); ?>"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus" ></span>  Adicionar</button></a></p>
 <br>
 
 <style>
