--- a/application/modules/admin/views/scripts/funcionarios/visualizar.phtml
+++ b/application/modules/admin/views/scripts/funcionarios/visualizar.phtml
@@ -26,7 +26,7 @@
 <?php if (count($this->messages)) : ?>
     <br>
     <?php foreach ($this->messages as $message) : ?>
-        <div class="alert alert-success" role="alert"><?php echo $this->escape($message); ?></div>
+        <?php echo $message; ?>
     <?php endforeach; ?>
 <?php endif; ?>
 
@@ -37,8 +37,8 @@
 <tr>
 	<td><strong>Nome</strong></td>
 	<td><strong>E-mail</strong></td>
-	<td><strong>Rg</strong></td>
-	<td><strong>Data de nascimento</strong></td>
+	<td><strong>Tempo serviço</strong></td>
+	<td><strong>Data de admissão</strong></td>
 	<td><strong>Data de cadastro</strong></td>
 	<td></td>
 </tr>
@@ -49,8 +49,8 @@
 	<tr>
 		<td> <?php echo $funcionarios['nome']; ?> </td>
 		<td><?php echo $funcionarios['email']; ?></td>
-		<td><?php echo $funcionarios['rg']; ?></td>
-		<td><?php echo $funcionarios['data_nascimento']; ?></td>
+		<td><?php echo $this->funcoes->diff2(date("d/m/Y", strtotime($funcionarios['admissao']) ), date("d/m/Y") ) . ' dias'; ?></td>
+		<td><?php echo $this->funcoes->volta_data_ao_normal($funcionarios['admissao']); ?></td>
 		<td><?php echo date('d/m/Y H:m:s', strtotime($funcionarios['data_cadastro'])); ?></td>
 		<td> <a href="<?php echo $this->baseUrl("admin/funcionarios/editar/id/" . $funcionarios['id_user']); ?>"><button class="btn btn-info btn-xs">  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Editar</button> </a>
 		
