--- a/application/modules/admin/views/scripts/projetos/addetapas.phtml
+++ b/application/modules/admin/views/scripts/projetos/addetapas.phtml
@@ -4,7 +4,7 @@
   <li class="active"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>  Adicionar nova etapa</li>
 </ol>
 
-<a href="<?php echo $this->baseUrl('admin/projetos/etapas/id/' . $this->idProjeto ); ?>"><button type="button" class="btn btn-success btn-xs"> <span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span> Voltar</button></a>
+<a href="<?php echo $this->baseUrl('admin/projetos/etapas/id/' . $this->idProjeto .'/idgrupo/'.$this->grupo_id); ?>"><button type="button" class="btn btn-success btn-xs"> <span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span> Voltar</button></a>
 
 <style>
 	
