--- a/application/modules/admin/views/scripts/funcionarios/editarferias.phtml
+++ b/application/modules/admin/views/scripts/funcionarios/editarferias.phtml
@@ -1,3 +1,5 @@
+ <script src="<?php echo $this->baseUrl("ckeditor/ckeditor.js"); ?>"></script>
+ 
 <ol class="breadcrumb">
   <li class="active"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Funcionários</li>
   <li class="active"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>  Férias</li>
