--- a/application/modules/user/views/scripts/projetos/visualizar.phtml
+++ b/application/modules/user/views/scripts/projetos/visualizar.phtml
@@ -1,4 +1,4 @@
-<a href="<?php echo $this->baseUrl('/user'); ?>"><button type="button" class="btn btn-success btn-xs"> <span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span> Voltar</button></a>
+<a href="<?php echo $this->baseUrl('user/index/index/idgrupo/' . $this->idgrupo); ?>"><button type="button" class="btn btn-success btn-xs"> <span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span> Voltar</button></a>
 <br>
 <br>
 <?php if (count($this->messages)) : ?>
@@ -43,7 +43,15 @@
 			echo '<tr>';
 			
 			echo '<td>';
-			echo $value['nome'] . ' - <a href="'.$this->baseUrl('user/etapas/mudarstatus/id/'.$value['id'].'/status/aberto').'">Aberto</a> / <a href="'.$this->baseUrl('user/etapas/mudarstatus/id/'.$value['id'].'/status/andamento').'">Em Andamento</a> / <a href="'.$this->baseUrl('user/etapas/mudarstatus/id/'.$value['id'].'/status/concluido').'">Concluído</a>';
+			echo $value['nome'] . ' - 
+
+			<!-- <a href="'.$this->baseUrl('user/etapas/mudarstatus/id/'.$value['id'].'/status/aberto/idgrupo/'.$this->idgrupo).'">Aberto</a> / -->
+
+			<a href="'.$this->baseUrl('user/etapas/mudarstatus/id/'.$value['id'].'/status/andamento/idgrupo/'.$this->idgrupo).'">Em Andamento</a> /
+
+			<a href="'.$this->baseUrl('user/etapas/mudarstatus/id/'.$value['id'].'/status/concluido/idgrupo/'.$this->idgrupo).'">Concluído</a>';
+
+
 			echo '</td>';
 			echo '<td>';
 			echo date('d/m/Y',strtotime($value['inicio']));
@@ -70,11 +78,8 @@
 			echo '</td>';
 			?>
 
-
-
-
 			<td>
-				<a href="<?php echo $this->baseUrl('/user/etapas/removerusuarioetapa/id/' . $value['id']); ?>" class="execc" onclick="return confirm('Remover tarefa?')"><button type="button" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove xex"></span></button></a>
+				<a href="<?php echo $this->baseUrl('/user/etapas/removerusuarioetapa/id/' . $value['id'].'/idgrupo/'.$this->idgrupo); ?>" class="execc" onclick="return confirm('Remover tarefa?')"><button type="button" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove xex"></span></button></a>
 
 			</td>
 			<?php
@@ -137,15 +142,10 @@
 					<?php 
 					if($aberto1 ) {
 						?>
-<a href="<?php echo $this->baseUrl('/user/etapas/adicionar/id/' . $value['id']); ?>" onclick="return confirm('Adicionar está tarefa?')"><button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-plus"></span></button></a>
-
-
+<a href="<?php echo $this->baseUrl('/user/etapas/adicionar/id/' . $value['id'].'/idgrupo/'.$this->idgrupo); ?>" onclick="return confirm('Adicionar está tarefa?')"><button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-plus"></span></button></a>
 						<?php
 					}
-
 					 ?>
-					
-
 					</td>
 
 
